Обновление .gitignore и добавление файлов

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-# Игнорирование всех файлов в проекте
+# Игнорирование всех файлов и папок
 *
 
-# Разрешение отслеживания конкретных файлов и папок
-!/.gitignore
-!/app/
+# Исключение .gitignore и разрешение отслеживания конкретных папок и файлов
+!.gitignore
+!.gitkeep
+
+# Разрешение для всех подпапок внутри app
+!/app/**
+
+# Разрешение для config/settings.py
+!/config/
 !/config/settings.py
+
+# Разрешение для всех подпапок внутри core
+!/core/
 !/core/bot.py
 !/core/logger.py
 !/core/redis_client.py
