Убран теневой бан. Добавлено раскрытие информации по нему, а также по структуре базы данных. Ошибался с теневым баном. Нельзя так делать. Лучше уведомлять пользователя о бане, чем делать это скрытно.

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@
 !/database/**/*
 !/database/__init__.py
 !/database/database.py
-
-/database/models.py
+!/database/models.py
 
 !/core/parser/
 !core/parser/.gitkeep
